3.1.11:
    - add cryolo 1.9.6 and napari-boxmanager 0.4.4
    - convert tomograms to mrc for napari_boxmanager viewer
    - napari viewer runs in the project Tmp folder
3.1.10: Fix: plugin works in the absence of tomo plugin
3.1.9: ftp links are not working, replaced by https
3.1.8: Fix: coordinates 3d sent to napari are not flipped on Y axis.
3.1.7:
     - Creating a manual picking protocol using napari-boxmanager
     - Creating a tomogram training protocol
     - Adding the filaments options to cryolo tomogram picking protocol
3.1.6: fix pretrained_weights param
3.1.5: fix auto picking streaming
3.1.4: add a check for empty cbox files
3.1.3: add cryolo 1.9.3, fix actual cryolo version, fix setuptools dependency
3.1.2:
    - Fix installation? Forcing python3.8?
    - Output creation ot tomo picking improved: Using pointer to tomos so streaming works
3.1:
    - complete refactoring of the plugin by GS
    - Add cryolo 1.8.5 support
    - fix #67, #74
3.0.10 12/09/2022 -- Making crYOLO 1.8 as default installation version
                  -- Checking the cuda version in order to create the installation command
3.0.9, 10/11/21 -- Tomo picking protocol added
3.0.8, Updated to crYOLO 1.8
3.0.2, Allowing CPU integration for crYOLO predict.
3.0.1,
    - python 3 migration
    - cryolo updated to 1.7.2
v1.3.0, 21/11/2019 -- Janni denoising protocol added. Picking in negative stain micrographs added.
v1.4.0, 17/04/2020 -- Updated to crYOLO 1.6.1.
v1.4.1. 21/04/2020 -- Add variable to select which CUDA to use. Fix bibtex.