@@ -65,29 +65,40 @@ class SphireProtCRYOLONapariTomoPicker(ProtTomoPicking):
         convert.convertMicrographs(tomoList, self._getExtraPath())
 
     def runCoordinatePickingStep(self):
-        # Getting the first tomogram to check if the .cbox file exist
-        tomogram = self.getInputTomos().getFirstItem()
-        filePath = os.path.join(self._getExtraPath(),
-                                convert.getMicFn(tomogram, "cbox"))
-        creationOldTime = None
-        if os.path.exists(filePath):
-            creationOldTime = time.ctime(os.path.getctime(filePath))
+        """Run napari-boxmanager"""
+
+        fileDict = {}
+        # Finding the coordinate file per tomogram
+        for tomogram in self.getInputTomos().iterItems():
+            filePath = os.path.join(self._getExtraPath(),  convert.getMicFn(tomogram, "cbox"))
+            if not os.path.exists(filePath):
+                filePath = os.path.join(self._getExtraPath(), convert.getMicFn(tomogram, "coords"))
+
+            if os.path.exists(filePath):
+                creationOldTime = time.ctime(os.path.getctime(filePath))
+                fileDict[filePath] = creationOldTime
 
         view = SphireGenericView(None,
                                  [tomo.clone() for tomo in self.getInputTomos()],
                                  self._getExtraPath(), isInteractive=True)
         view.show()
 
-        if os.path.exists(filePath):
-            if creationOldTime is not None:
+        for tomogram in self.getInputTomos().iterItems():
+            filePath = os.path.join(self._getExtraPath(), convert.getMicFn(tomogram,  "cbox"))
+            if not os.path.exists(filePath):
+                filePath = os.path.join(self._getExtraPath(), convert.getMicFn(tomogram, "coords"))
+
+            if filePath in fileDict:
                 modificationTime = time.ctime(os.path.getctime(filePath))
-                if creationOldTime != modificationTime:
+                if fileDict[filePath] != modificationTime:
                     # Open dialog to request confirmation to create output
                     import tkinter as tk
                     if askYesNo(Message.TITLE_SAVE_OUTPUT, Message.LABEL_SAVE_OUTPUT, tk.Frame()):
                         self.createOutput()
-            else:
+                        break
+            elif os.path.exists(filePath):
                 self.createOutput()
+                break
 
     def createOutput(self):
         setOfTomograms = self.getInputTomos()
@@ -101,6 +112,9 @@ class SphireProtCRYOLONapariTomoPicker(ProtTomoPicking):
 
         for tomogram in setOfTomograms.iterItems():
             filePath = os.path.join(outputPath, convert.getMicFn(tomogram, "cbox"))
+            if not os.path.exists(filePath):
+                filePath = os.path.join(outputPath, convert.getMicFn(tomogram, "coords"))
+
             if os.path.exists(filePath) and os.path.getsize(filePath):
                 tomogramClone = tomogram.clone()
                 tomogramClone.copyInfo(tomogram)
